modal alignment fixes

--- a/src/chess.module.css
+++ b/src/chess.module.css
@@ -222,7 +222,7 @@ html, body{
 .capturePlayersModal{
   border: 2px solid #282c34;
   border-radius: 10px;
-  width:41.66%;
+  padding:10px 15px;
   position:absolute;
   left:50%;
   top:50%;
